update the user's credentials when zkp fails

--- a/solution/helper/static/update_idp_user.html
+++ b/solution/helper/static/update_idp_user.html
@@ -16,7 +16,7 @@
     <label for="password">New Password</label>
     <input type="password" id="password" name="password"/>
     <br>
-    <input type="submit" value="Update"/>
+    <input type="submit" value="Update and Authenticate"/>
     % if context.get('message', UNDEFINED) is not UNDEFINED:
     <br>
     <br>
